--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [3.11, 3.12]
+        python-version: [3.12]
 
     steps:
     - uses: actions/checkout@v4
@@ -28,4 +28,4 @@ jobs:
     - name: Run Tests
       run: |
         cd mysite
-        python manage.py test
+        python mysite/manage.py runserver
