--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -28,4 +28,4 @@ jobs:
     - name: Run Tests
       run: |
         cd mysite
-        python mysite/manage.py runserver
+        python manage.py runserver
